# NBA_PYTHON

./: .gitignore  .pre-commit-config.yaml  ABA_MONITORAMENTO.md  ANALISE_MODELOS_ALTERNATIVOS.md  ATUALIZACOES_V2.txt  BLOQUEIO_BASKETBALL_REF_SOLUCAO.md  BOTAO_ATUALIZACAO_LESOES.md  COMECE_AQUI.txt  CONCLUSAO_VALIDACAO.md  GUIA_COMPLETO_V2.txt  GUIA_LESOES_TEMPO_REAL.md  GUIA_SCRAPERS_ALTERNATIVOS.md  GUIA_SCRAPER_GAME_STATS.md  GUIA_SCRAPER_NBA.md  GUIA_VALIDACAO_CRUZADA.md  IMPLEMENTACAO_COMPLETA_LESOES.md  LIMPEZA_REPOSITORIO.md  LISTA_ARQUIVOS_GERADOS.txt  MODELO_COMPARATIVO_RESUMO.txt  PROJECT_SUMMARY.txt  QUICKSTART.md  README_BETTING.md  README_V2.txt  REFERENCIA_RAPIDA.md  RESUMO_ENTREGA.txt  RESUMO_LESOES_REAL_TIME.md  RESUMO_VALIDACAO.txt  REVALIDACAO_MODELO.md  VALIDACAO_CRUZADA_RELATORIO.md  analyze_overfitting_cv.py  app.py  automatic_model_monitor.py  basketball_ref_scraper.py  basketball_ref_scraper_v2.py  betting_app.py  betting_app_boxscores.py  clean_monitoring.py  data_player_game.py  data_player_season.py  demo_report.py  (+26 more)
.streamlit/: config.toml
data/: historico_apostas.csv  nba_player_stats_multi_season.csv  nba_players_status.csv
