[project]
name = "nba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nba-api>=1.11.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.40.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
